--- a/src/app/calculadora/calculadora.component.html
+++ b/src/app/calculadora/calculadora.component.html
@@ -1,51 +1,52 @@
 <div class="section">
-    <div class="container fluid">
-        <h2 class="subtitle">Calculadora de Reconversión Monetaria para Venezuela</h2>
-    </div>
-    <div class="container fluid">
-      <div class="card">
-        <div class="card-content" id="impresion_calculo">
-          <div class="has-text-centered">
-            Base de Cálculo:
-            <b>{{baseCalculo | montovalido | currency:' '}}</b>
-          </div>
-           <div class="has-text-centered">
-            {{baseCalculo | montovalido | montoFuerte | currency:'BsF: '}}
-          </div>
-          <div class="has-text-centered">
-              {{baseCalculo | montovalido | montoSoberano | currency:'BsS: '}}
-            </div>
+
+  <div class="container is-block">
+    <div class="card">
+      <div class="card-header has-text-centered">
+        <p class="has-text-centered has-text-weight-bold">
+          Click en la imagen para cambiar conversión
+        </p>
+      </div>
+      <div class="colums">
+        <div class="column is-4 is-offset-4">
+          <figure class="image is-3by1" (click)="switchReconvertion()">
+            <img [src]="reconvertion_image" alt="tipo_reconversion">
+          </figure>
         </div>
       </div>
     </div>
-    <div class="container flex">
-        <div class="field">
-          <div class="label">Monto: </div>
-          <div class="control has-icons-left has-icons-right">
-            <input type="number" 
-              class="input" 
-              placeholder="Ingrese el monto a calcular" 
-              [(ngModel)]="baseCalculo"
-              name="base_calculo"
-              step="0.001"
-              required
-              >
-            <span class="icon is-small is-left">
-                <i class="fas fa-calculator"></i>
-              </span>
-              <!-- <span class="icon is-small is-right">
-                <i class="fas fa-check"></i>
-              </span> -->
-          </div>
+    <div class="card ">
+
+      <div class="card-content">
+        <div class="has-text-centered has-text-link" *ngIf='currencyType=="S"'>
+          <p class="has-text-link is-size-3">{{baseCalculo | montovalido | montoFuerte | currency:'Bs.F: '}}</p>
         </div>
-        
-        <div class="field is-grouped has-text-centered">
-          <div class="control ">
-            <button class="button is-link">Calcular</button>
-          </div>
-          <div class="control">
-            <button class="button clear" (click)='reset()'>Limpiar</button>
-          </div>
+        <div class="has-text-centered" *ngIf='currencyType=="F"'>
+          <p class="has-text-link is-size-3">{{baseCalculo | montovalido | montoSoberano | currency:'Bs.S: '}}</p>
         </div>
+
+        <div class="has-text-centered" class="base_calculo">
+          Base de Cálculo:
+          <b>{{baseCalculo | montovalido | currency:prefix+': '}}</b>
+        </div>
+      </div>
     </div>
+    <div class="field ">
+      <div class="label ">Monto: </div>
+      <div class="control has-icons-left has-icons-right ">
+        <input type="number" solonumeros class="input is-medium" placeholder="Monto" [(ngModel)]="baseCalculo" name="base_calculo"
+          step="0.001" lang="en-150" required>
+        <span class="icon is-small is-left ">
+          <!-- <i class="fas fa-calculator "></i> -->
+          {{prefix}}
+        </span>
+        <!-- <span class="icon is-small is-right ">
+                <i class="fas fa-check "></i>
+              </span> -->
+      </div>
+    </div>
+    <div class="control ">
+      <button class="button clear is-warning" (click)='reset()' [disabled]="!baseCalculo">Limpiar</button>
+    </div>
+  </div>
 </div>
